--- a/config.template
+++ b/config.template
@@ -17,50 +17,66 @@
 ;==========================================================
 
 [colors]
-background = #282A2E
-background-alt = #373B41
-foreground = #C5C8C6
-primary = #F0C674
-secondary = #8ABEB7
-alert = #A54242
-disabled = #707880
+background = ${wal.color0}
+network = ${wal.color1}
+background-alt = ${wal.color2}
+disabled = ${wal.color3}
+cpu = ${wal.color4}
+gpu = ${wal.color5}
+primary = ${wal.color6}
+foreground = ${wal.color7}
+disk = ${wal.color8}
+alert = ${wal.color9}
 
-[bar/example]
+[bar/laptop]
+modules-left = xworkspaces xwindow
+modules-right = fs-root fs-usb pulseaudio memory cpu wlan eth date systray 
+
 width = 100%
 height = 24pt
 radius = 6
-
 ; dpi = 96
-
 background = ${colors.background}
 foreground = ${colors.foreground}
-
 line-size = 3pt
-
 border-size = 4pt
 border-color = #00000000
-
 padding-left = 0
 padding-right = 1
-
 module-margin = 1
-
 separator = |
 separator-foreground = ${colors.disabled}
-
 font-0 = monospace;2
-
-modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
-
 cursor-click = pointer
 cursor-scroll = ns-resize
-
 enable-ipc = true
+wm-restack = i3
 
-; wm-restack = generic
-; wm-restack = bspwm
-; wm-restack = i3
+[bar/tv]
+monitor = HDMI-1-0
+monitor-strict = false
+modules-left = xworkspaces xwindow
+modules-right = fs-root fs-usb pulseaudio memory cpu wlan eth date systray 
+
+width = 100%
+height = 24pt
+radius = 6
+; dpi = 96
+background = ${colors.background}
+foreground = ${colors.foreground}
+line-size = 3pt
+border-size = 4pt
+border-color = #00000000
+padding-left = 0
+padding-right = 1
+module-margin = 1
+separator = |
+separator-foreground = ${colors.disabled}
+font-0 = monospace;2
+cursor-click = pointer
+cursor-scroll = ns-resize
+enable-ipc = true
+wm-restack = i3
 
 ; override-redirect = true
 
@@ -79,11 +95,12 @@ format-margin = 8pt
 tray-spacing = 16pt
 
 [module/xworkspaces]
+pin-workspaces = true
 type = internal/xworkspaces
 
 label-active = %name%
 label-active-background = ${colors.background-alt}
-label-active-underline= ${colors.primary}
+label-active-underline= ${colors.background-alt}
 label-active-padding = 1
 
 label-occupied = %name%
@@ -101,53 +118,55 @@ label-empty-padding = 1
 type = internal/xwindow
 label = %title:0:60:...%
 
-[module/filesystem]
+[fs-base]
 type = internal/fs
-interval = 25
+fixed-values = true
 
+[module/fs-root]
+inherit = fs-base
+interval = 25
 mount-0 = /
 
-label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
+label-mounted = 󰋊%{F-} %free%
+label-mounted-foreground = ${colors.disk}
+label-unmounted = 󰋊%{F-} not mounted!
+label-unmounted-foreground = ${colors.disabled}
 
-label-unmounted = %mountpoint% not mounted
+[module/fs-usb]
+inherit = fs-base
+interval = 25
+mount-0 = /run/media/thederpykrafter/KINGSTON
+
+label-mounted = 󰕓 %{F-} %free%
+label-mounted-foreground = ${colors.disk}
+label-unmounted = 󰕓 not mounted!
 label-unmounted-foreground = ${colors.disabled}
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "VOL "
-format-volume-prefix-foreground = ${colors.primary}
-format-volume = <label-volume>
+format-volume-foreground = ${colors.primary}
+format-volume = <ramp-volume> <label-volume>
 
-label-volume = %percentage%%
-
-label-muted = muted
+ramp-volume-0 = 󰕿
+ramp-volume-1 = 󰖀
+ramp-volume-2 = 󰕾
+label-volume = %{F-}%percentage%%
+label-muted = 󰖁
 label-muted-foreground = ${colors.disabled}
-
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
-
-label-layout = %layout%
-label-layout-foreground = ${colors.primary}
-
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.secondary}
 
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "RAM "
-format-prefix-foreground = ${colors.primary}
+format-prefix = " "
+format-prefix-foreground = ${colors.cpu}
 label = %percentage_used:2%%
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "CPU "
-format-prefix-foreground = ${colors.primary}
+format-prefix = "󰻠 "
+format-prefix-foreground = ${colors.cpu}
 label = %percentage:2%%
 
 [network-base]
@@ -156,25 +175,29 @@ interval = 5
 format-connected = <label-connected>
 format-disconnected = <label-disconnected>
 label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
+label-connected-foreground = ${colors.network}
 
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
+label-connected = 󰖩%{F-} %essid% %local_ip%
 
 [module/eth]
 inherit = network-base
 interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+label-connected = 󰈁%{F-} %local_ip%
 
 [module/date]
 type = internal/date
 interval = 1
 
-date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
+format = <label>
+date =
+date-alt =  %a, %b %d,
+time = 󰥔 %I:%M %p
+time-alt = 󰥔 %Y %I:%M %p
 
-label = %date%
+label = %date% %time%
 label-foreground = ${colors.primary}
 
 [settings]
