omg im done for now

--- a/config.template
+++ b/config.template
@@ -27,6 +27,7 @@ primary = ${wal.color6}
 foreground = ${wal.color7}
 disk = ${wal.color8}
 alert = ${wal.color9}
+border = ${wal.color66}
 
 [bar/laptop]
 modules-left = xworkspaces xwindow
@@ -39,8 +40,8 @@ radius = 6
 background = ${colors.background}
 foreground = ${colors.foreground}
 line-size = 3pt
-border-size = 4pt
-border-color = #00000000
+border-size = 2pt
+border-color = ${colors.border}
 padding-left = 0
 padding-right = 1
 module-margin = 1
@@ -65,8 +66,8 @@ radius = 6
 background = ${colors.background}
 foreground = ${colors.foreground}
 line-size = 3pt
-border-size = 4pt
-border-color = #00000000
+border-size = 2pt
+border-color = ${colors.border}
 padding-left = 0
 padding-right = 1
 module-margin = 1
