im going to bed jfc

--- a/config.template
+++ b/config.template
@@ -31,7 +31,7 @@ border = ${wal.color66}
 
 [bar/laptop]
 modules-left = xworkspaces xwindow
-modules-right = fs-root fs-usb pulseaudio memory cpu wlan eth date systray 
+modules-right = fs-root fs-usb pulseaudio memory cpu wlan eth systray date 
 
 width = 100%
 height = 24pt
@@ -57,7 +57,7 @@ wm-restack = i3
 monitor = HDMI-1-0
 monitor-strict = false
 modules-left = xworkspaces xwindow
-modules-right = fs-root fs-usb pulseaudio memory cpu wlan eth date systray 
+modules-right = fs-root fs-usb pulseaudio memory cpu wlan eth date 
 
 width = 100%
 height = 24pt
@@ -92,8 +92,8 @@ wm-restack = i3
 [module/systray]
 type = internal/tray
 
-format-margin = 8pt
-tray-spacing = 16pt
+format-margin = 4pt
+tray-spacing = 8pt
 
 [module/xworkspaces]
 pin-workspaces = true
