not needed with picom

--- a/config.template
+++ b/config.template
@@ -395,6 +395,6 @@ animation-low-framerate = 200
 
 [settings]
 screenchange-reload = true
-pseudo-transparency = true
+pseudo-transparency = false
 
 ; vim:ft=dosini
