--- a/config.template
+++ b/config.template
@@ -215,8 +215,9 @@ label-visible-padding = 1
 ; Default: %icon% %name%
 label-urgent = %name%
 label-urgent-foreground = ${colors.network}
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 4
+label-urgent-background = ${colors.gpu}
+label-urgent-underline = ${colors.alert}
+label-urgent-padding = 2
 
 ; Separator in between workspaces
 label-separator =
